Thread без общих ресурсов [#267919 #318366]